--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -1,15 +1,13 @@
 ---
 main_menu:
-  - label: Pricing
-    href: /pricing
-  - label: Blog
-    href: /blog
-  - label: Shop
-    href: /shop
-  - label: Work
-    href: /work
-  - label: Contact
-    href: "#contact"
+  - label: Production
+    href: /production
+  - label: Post
+    href: /post
+  - label: Digital
+    href: /digital
+  - label: AI
+    href: /ai
 footer_menus:
   - label: Info
     links:
@@ -19,14 +17,16 @@ footer_menus:
         href: /about-nebulix
       - label: Restaurant Menu Demo
         href: /menu/drinks
-  - label: Documentation
+  - label: Tertiery
     links:
-      - label: Docs
-        href: /blog/tag/docs
-      - label: Blog
-        href: /blog
-      - label: Pricing
-        href: /pricing
+      - label: Facilities
+        href: /facilities
+      - label: Team
+        href: /team
+      - label: Contact
+        href: /contact
+      - label: Login
+        href: /
 legal_menu:
   - label: Cookies
     href: "#"
