--- a/src/content/config/about.mdx
+++ b/src/content/config/about.mdx
@@ -1,29 +1,24 @@
 ---
-sitename: Nebulix
+sitename: Tunnel
 intro: |
-  A theme for Astro + StaticCms
+  The official site of Tunnel, Inc.
 team:
-  - name: Demien
-    position: HR
-    photo: /src/assets/about-us.jpeg
-    thumbnail: /src/assets/dsc06460.jpg
-  - name: Preetam Slot
-    position: Creative Developer
-    photo: /src/assets/blog-placeholder-about.jpg
-    thumbnail: /src/assets/about-us.jpeg
-  - name: Bender
-    position: Head of beanding
+  - name: Alan Pao
+    position: CEO
     photo: /src/assets/nebulala_rocket.jpeg
     thumbnail: /src/assets/about-us.jpeg
+  - name: Elijah Shepard
+    position: Creative Director
+    thumbnail: /src/assets/nebula_pluche-drago2.png
 tag:
   - design
   - docs
   - fantasy
 footer_text: >
-  Where Stellar Ideas Shine Bright. Explore limitless possibilities with
-  **Nebulix**, the fast static site template that fuels blogs, portfolios, shops
-  & menus – igniting your digital nebula of creativity.
-newsletter_text: >
-  **Join our newsletter** and stay updated on new features, themes &
-  developments.
+  TUNNEL, Inc. is a Santa Monica-based company that utilizes its focus on
+  technology and unique creative approach to create, restore, and deliver
+  high-end media content, including feature films, television programs, live
+  events, commercials, music videos, and trailers.
+newsletter_text: |
+  **Join our newsletter** and stay updated.
 ---
