--- a/src/content/config/contact.mdx
+++ b/src/content/config/contact.mdx
@@ -1,19 +1,11 @@
 ---
-email: hello@unfolding.io
-phone_label: 06 22222222
-phone_link: tel:+3460000000
+email: hello@tunnel-inc.com
+phone_label: ""
+phone_link: tel:+13102601208
 social:
-  - icon: /src/icons/github.svg
-    label: github
-    href: https://github.com/unfolding-io/nebulix
-    icons: null
   - icon: /src/icons/instagram.svg
     label: instagram
-    href: https://www.instagram.com/unfolding.io/
-  - icon: /src/icons/whatsapp.svg
-    label: Whatsapp
-    href: https://wa.me/34649712625
-    icons: null
+    href: https://www.instagram.com/tunnelpost
 form:
   thumbnail: src/assets/cosmic_contact.jpg
   provider: slack
@@ -37,6 +29,8 @@ form:
   title: |
     Talk to us
   intro: >
-    Great that you have questions! Please select a topic and tell us how we can
-    help you and we get back to you ASAP.
+    **Visiting us in person?** 
+
+
+    Take either the 405 or 110 Fwy to the 10 Fwy West towards Santa Monica. Exit 4th St from the 10 Fwy and turn right onto 4th St. Continue several blocks and left onto Wilshire.  We are located on the northwest corner of 3rd and Wilshire.
 ---
