styling, pages, configuration

--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -13,10 +13,8 @@ footer_menus:
     links:
       - label: Home
         href: /
-      - label: About us
-        href: /about-nebulix
-      - label: Restaurant Menu Demo
-        href: /menu/drinks
+      - label: About
+        href: /about      
   - label: Tertiery
     links:
       - label: Facilities
