--- a/src/content/page/facilities.mdx
+++ b/src/content/page/facilities.mdx
@@ -1,5 +1,5 @@
 ---
-title: Tunnel
+title: Facilities
 description: Tunnel specializes in high end finishing. Tunnel takes projects
   from offline editorial through 2K or 4K finishing with every step in between,
   from color correction, dirt, and scratch removal to high end titling design
