evolved styles and structure

--- a/src/content/config/project.mdx
+++ b/src/content/config/project.mdx
@@ -1,6 +1,8 @@
 ---
-title: "My Cosmos Craftsmanship Collection "
-description: asdadadsad
+title: Our Work
+description: TUNNEL has provided Digital Intermediate and other Post Production
+  services to nearly every major distributor as well as to a prolific number of
+  producers and production companies.
 intro: "\n\n\n"
 per_page: 10
 hero_buttons:
@@ -20,10 +22,10 @@ project_tags:
     thumbnail: /src/assets/cosmic_moscow_mule.jpeg
     name: Portraits
 style:
-  template: full
+  template: split
   hero_template: plain
   container: lg
-  card_template: grid
+  card_template: flex
   hero_image_opacity: ""
-thumbnail: /src/assets/nebulala_rocket.jpeg
+thumbnail: /src/assets/landing_bg.jpg
 ---
