--- a/src/content/page/digital.mdx
+++ b/src/content/page/digital.mdx
@@ -1,15 +1,11 @@
 ---
 title: Tunnel Digital
-description: Tunnel specializes in high end finishing. Tunnel takes projects
-  from offline editorial through 2K or 4K finishing with every step in between,
-  from color correction, dirt, and scratch removal to high end titling design
-  and visual effects. Tunnel has a powerhouse team to put the finishing touch on
-  your project. In order to maintain the highest level of quality control,
-  Tunnel has brought in-house all of the stages where quality loss can occur.
-  Starting with ingest, be it 4K scanning of RED files conversion, Tunnel
-  ensures the proper attention to detail in the finishing process is given to
-  each project.
-intro: ...
+description: Tunnel's digital division has played a key role in the mastering
+  and delivery of Disney's theatrical releases over the past 5 years. We develop
+  strategic and flexible software solutions to meet the needs of our clients.
+intro: Tunnel's digital division has played a key role in the mastering and
+  delivery of Disney's theatrical releases over the past 5 years. We develop
+  strategic and flexible software solutions to meet the needs of our clients.
 hero_template: image
 template: full
 container: md
