--- a/src/content/project/unveiling-the-galactic-pluche-collection.mdx
+++ b/src/content/project/unveiling-the-galactic-pluche-collection.mdx
@@ -1,21 +1,10 @@
 ---
-tag:
-  - Portraits
-  - Intergalactic
-title: Unveiling the Galactic Pluche Collection
-description: The "Galactic Pluche Collection" is a truly mesmerizing and
-  out-of-this-world assortment of plush toys that brings the wonders of the
-  universe into the palm of your hand. This collection is not just a set of
-  ordinary stuffed animals; it's a cosmic journey waiting to be explored.
-intro: The "Galactic Pluche Collection" is a truly mesmerizing and
-  out-of-this-world assortment of plush toys that brings the wonders of the
-  universe into the palm of your hand. This collection is not just a set of
-  ordinary stuffed animals; it's a cosmic journey waiting to be explored.
-hero_buttons:
-  - icon_only: false
-    label: Learn More
-    href: "#more"
-    icon: /src/icons/down-line.svg
+tag: []
+title: The Nice Guys
+description: ...
+intro: ...
+hero_buttons: []
+features: []
 blocks:
   - type: text_image
     component: TextImage
@@ -102,16 +91,18 @@ blocks:
       - title: Nebulix Pluche
         image: /src/assets/nebula_pluche-drago2.png
 style:
-  template: full
-  card_template: grid
+  template: split
+  card_template: flex
   hero_template: image
   hero_image_opacity: "0.5"
   container: sm
   page_class: "surface-primary "
   content_class: text-center py-8
-thumbnail: /src/assets/pluche_collection.jpeg
+thumbnail: /src/assets/cwh55wceuscolp0kbiel4hz9enh.jpg
 date: 2023-09-03T10:31:47.439Z
 ---
-## Cosmic Creatures
+## From the mind of Shane Black
 
-Each plush toy in the Galactic Pluche Collection represents a unique cosmic creature. From adorable alien beings to interstellar critters, these toys are designed to spark the imagination and transport you to distant galaxies.
+***The Nice Guys*** is a 2016 American [neo-noir](https://en.wikipedia.org/wiki/Neo-noir) [buddy](https://en.wikipedia.org/wiki/Buddy_film) [action comedy film](https://en.wikipedia.org/wiki/Action_comedy_film) directed by [Shane Black](https://en.wikipedia.org/wiki/Shane_Black), who co-wrote the screenplay with Anthony Bagarozzi. The film stars [Russell Crowe](https://en.wikipedia.org/wiki/Russell_Crowe) and [Ryan Gosling](https://en.wikipedia.org/wiki/Ryan_Gosling) in the title roles, with [Angourie Rice](https://en.wikipedia.org/wiki/Angourie_Rice), [Matt Bomer](https://en.wikipedia.org/wiki/Matt_Bomer), [Margaret Qualley](https://en.wikipedia.org/wiki/Margaret_Qualley), [Keith David](https://en.wikipedia.org/wiki/Keith_David), and [Kim Basinger](https://en.wikipedia.org/wiki/Kim_Basinger) appearing in supporting roles. Set in 1977 [Los Angeles](https://en.wikipedia.org/wiki/Los_Angeles), the film focuses on [private eye](https://en.wikipedia.org/wiki/Private_investigator) Holland March (Gosling) and tough [enforcer](https://en.wikipedia.org/wiki/Mob_enforcer) for hire Jackson Healy (Crowe) who team up to investigate the disappearance of a teenage girl (Qualley).
+
+_The Nice Guys_ premiered on May 11, 2016, in [Hollywood](https://en.wikipedia.org/wiki/Hollywood,_Los_Angeles), screened on May 15 at the [2016 Cannes Film Festival](https://en.wikipedia.org/wiki/2016_Cannes_Film_Festival), and was released by [Warner Bros. Pictures](https://en.wikipedia.org/wiki/Warner_Bros._Pictures) in the United States on May 20, 2016. It received positive reviews from critics for its humor, mystery, and the performances of Crowe and Gosling. It grossed $62 million on a $50 million budget.[[6]](https://en.wikipedia.org/wiki/The_Nice_Guys#cite_note-reviews-6)
