--- a/src/content/config/navigation.mdx
+++ b/src/content/config/navigation.mdx
@@ -9,18 +9,18 @@ main_menu:
   - label: AI
     href: /ai
 footer_menus:
-  - label: Info
+  - label: ...
     links:
-      - label: Home
-        href: /
-      - label: About
-        href: /about      
-  - label: Tertiery
-    links:
+      - label: Work
+        href: /work
+      - label: Reels
+        href: /reels      
       - label: Facilities
         href: /facilities
       - label: Team
         href: /team
+  - label: ...
+    links:      
       - label: Contact
         href: /contact
       - label: Login
