--- a/src/content/config/blog.mdx
+++ b/src/content/config/blog.mdx
@@ -13,8 +13,8 @@ blog_tags:
     thumbnail: /src/assets/cosmic_coffee_5.jpeg
     hero_buttons: []
     name: Docs
-  - title: Nebulix Features
-    description: What Nebulix can do
+  - title: c0reV2 Features
+    description: What c0reV2 can do
     intro: what makes it move
     thumbnail: /src/assets/cosmic-aperol-spritz.jpeg
     name: Features
