--- a/src/content/config/project.mdx
+++ b/src/content/config/project.mdx
@@ -17,7 +17,7 @@ project_tags:
     thumbnail: /src/assets/nebulala_3.jpeg
     name: Intergalactic
   - title: Misty Portraits
-    description: Nebulix's portrait selection
+    description: c0reV2's portrait selection
     intro: Framing the face
     thumbnail: /src/assets/cosmic_moscow_mule.jpeg
     name: Portraits
