--- a/src/content/project/unveiling-the-galactic-pluche-collection.mdx
+++ b/src/content/project/unveiling-the-galactic-pluche-collection.mdx
@@ -49,7 +49,7 @@ blocks:
 
 
       Beyond their cuddly appeal, these toys offer an educational aspect. Each toy comes with a tag that provides fascinating facts about the cosmic creatures they represent, sparking curiosity and learning.
-    thumbnail: /src/assets/nebula_pluche-nebulix.png
+    thumbnail: /src/assets/nebula_pluche-c0reV2.png
     block_class: pt-4 pb-20
   - type: text_image
     component: TextImage
@@ -84,11 +84,11 @@ blocks:
     container: md
     animate: true
     images:
-      - title: Nebulix Pluche
+      - title: c0reV2 Pluche
         image: /src/assets/nebula_pluche-cuty.png
-      - title: Nebulix Pluche
+      - title: c0reV2 Pluche
         image: /src/assets/nebula_pluche-drago.png
-      - title: Nebulix Pluche
+      - title: c0reV2 Pluche
         image: /src/assets/nebula_pluche-drago2.png
 style:
   template: split
