--- a/src/content/config/shop.mdx
+++ b/src/content/config/shop.mdx
@@ -14,7 +14,7 @@ product_categories:
     description: Something you need
     intro: Something you need
     body: "\n\n\n"
-    thumbnail: /src/assets/nebulix_water_cap-1.png
+    thumbnail: /src/assets/c0reV2_water_cap-1.png
     name: "Merch"
   - title: Out Of This World Merch
     description: not active
@@ -47,7 +47,7 @@ product_categories:
     name: Style 3
     title: Out Of This World Merch
     description: merch
-    thumbnail: /src/assets/nebulix_merch.jpeg
+    thumbnail: /src/assets/c0reV2_merch.jpeg
     intro: ""
     hero_buttons:
       - icon_only: false
@@ -70,7 +70,7 @@ product_categories:
     overwrite_style: true
     name: Donations
   - title: Licenses for our themes
-    description: "Want to get rid of the attribution? buy a Nebulix license "
+    description: "Want to get rid of the attribution? buy a c0reV2 license "
     thumbnail: /src/assets/license.jpeg
     body: "\n\n\n"
     style:
@@ -98,5 +98,5 @@ style:
   hero_surface: primary
   hero_image_opacity: ""
   page_class: text-center
-thumbnail: /src/assets/nebulix-tshirt-2.png
+thumbnail: /src/assets/c0reV2-tshirt-2.png
 ---
