--- a/src/content/config/about.mdx
+++ b/src/content/config/about.mdx
@@ -9,11 +9,12 @@ team:
     thumbnail: /src/assets/about-us.jpeg
   - name: Elijah Shepard
     position: Creative Director
-    thumbnail: /src/assets/nebula_pluche-drago2.png
+    thumbnail: /src/assets/tunnel_2.jpg
 tag:
-  - design
-  - docs
-  - fantasy
+  - production
+  - post-production
+  - digital
+  - ai  
 footer_text: >
   TUNNEL, Inc. is a Santa Monica-based company that utilizes its focus on
   technology and unique creative approach to create, restore, and deliver
