--- a/src/content/page/shop.mdx
+++ b/src/content/page/shop.mdx
@@ -38,12 +38,12 @@ blocks:
     image_size: "50"
     reverse: false
     animate: false
-    thumbnail: /src/assets/cosmic_coffee_2.jpeg
+    thumbnail: /src/assets/tunnel_1.jpg
     content: >
       ## **Caffeinate a developer** Brewing Inspiration, One Cup at a Time.
 
 
-      Sip on the satisfaction of knowing that your donation is a key ingredient in fueling creativity. Your support empowers artists, writers, musicians, and content creators to keep innovating, producing, and delighting the world with their work. With each cup of virtual coffee, you’re helping transform visions into reality.
+      Sip on the satisfaction of knowing...
     buttons:
       - icon_only: false
         label: Buy me a coffee
@@ -72,8 +72,8 @@ blocks:
       ## Merch Store
 
 
-      Explore our Interstellar Webshop featuring products that are truly out of this world. Dive into a cosmic collection as vast as the universe itself.
-    thumbnail: /src/assets/c0reV2-ben-bag.png
+      Explore our ...
+    thumbnail: /src/assets/tunnel_1.jpg
     buttons:
       - icon_only: false
         label: Shop App productrs
