--- a/src/content/config/blog.mdx
+++ b/src/content/config/blog.mdx
@@ -6,23 +6,7 @@ intro: |
   Read about updates, documentation, features and fiction.
 per_page: 10
 hero_buttons: []
-blog_tags:
-  - title: "Documentation "
-    description: read about how nebulala works
-    intro: Lets get technical
-    thumbnail: /src/assets/cosmic_coffee_5.jpeg
-    hero_buttons: []
-    name: Docs
-  - title: c0reV2 Features
-    description: What c0reV2 can do
-    intro: what makes it move
-    thumbnail: /src/assets/cosmic-aperol-spritz.jpeg
-    name: Features
-  - title: Fiction
-    description: just to show of some of the features
-    intro: just to show of some of the features
-    thumbnail: /src/assets/nebulala_2.jpeg
-    name: Fiction
+blog_tags: []
 style:
   template: split
   hero_template: plain
@@ -30,5 +14,5 @@ style:
   page_class: ""
   card_template: grid
   hero_image_opacity: "0.5"
-thumbnail: /src/assets/cosmic_news.jpeg
+thumbnail: /src/assets/tunnel_1.jpg
 ---
