--- a/src/content/config/contact.mdx
+++ b/src/content/config/contact.mdx
@@ -7,7 +7,7 @@ social:
     label: instagram
     href: https://www.instagram.com/tunnelpost
 form:
-  thumbnail: src/assets/cosmic_contact.jpg
+  thumbnail: src/assets/tunnel_2.jpg
   provider: slack
   topics:
     - label: I need financing for my film
