--- a/src/content/config/project.mdx
+++ b/src/content/config/project.mdx
@@ -6,18 +6,7 @@ description: TUNNEL has provided Digital Intermediate and other Post Production
 intro: "\n\n\n"
 per_page: 10
 hero_buttons: []
-project_tags:
-  - title: Intergalactic Systems
-    description: Projects out of this world
-    intro: Projects out of this world
-    body: "\n\n\n"
-    thumbnail: /src/assets/nebulala_3.jpeg
-    name: Intergalactic
-  - title: Misty Portraits
-    description: c0reV2's portrait selection
-    intro: Framing the face
-    thumbnail: /src/assets/cosmic_moscow_mule.jpeg
-    name: Portraits
+project_tags: []
 style:
   template: split
   hero_template: plain
