added video support

--- a/src/content/page/facilities.mdx
+++ b/src/content/page/facilities.mdx
@@ -22,9 +22,11 @@ style:
   content_class: py-20 text-center
   page_class: ""
   card_template: grid
-  hero_image_opacity: "1"
-thumbnail: /src/assets/landing_bg.jpg
-og_image: /src/assets/landing_bg.jpg
+  hero_image_opacity: "0.4"
+  hero_surface: surface-dark
+video: /src/assets/video/facilities.mp4
+thumbnail: /src/assets/233-Wilshire-Blvd-Santa-Monica-CA-233-Wilshire-blvd-1-LargeHighDefinition.jpg
+og_image: ""
 ---
 ## From Concept To Distibution
 
