gsap and video changes

--- a/src/content/page/contact.mdx
+++ b/src/content/page/contact.mdx
@@ -9,12 +9,13 @@ pubDate: Jul 08 2022
 layout-hidden: blog
 style:
   hero_template: plain
-  template: full
+  template: split
   container: sm
   content_class: py-20 text-center
-  page_class: ""
+  page_class: noHeroText
   card_template: grid
   hero_image_opacity: "1"
+video: /src/assets/video/facilities.mp4
 thumbnail: /src/assets/bg_tunnel-blur.jpg
 og_image: ""
 ---
